workbook tbc & add FocusActive

--- a/Node/Vue/FocusActive.html
+++ b/Node/Vue/FocusActive.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="//cdn.bootcss.com/vue/2.1.10/vue.js
 "></script>
     <script>
+        //记得不要忘了 window.onload
         window.onload = function(){
             new Vue({
                 el: "#app",
